--- a/res/xml/setting.xml
+++ b/res/xml/setting.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:key="parent"
-     >
+    android:key="parent" >
 
-  <SwitchPreference android:key="test">
-      
-  </SwitchPreference>
-
+    <SwitchPreference
+        android:disableDependentsState="true"
+        android:key="gesture_wakeup"
+       
+        android:title="@string/gesture_wakeup" >
+    </SwitchPreference>
+	
 </PreferenceScreen>
