--- a/res/xml/setting.xml
+++ b/res/xml/setting.xml
@@ -10,43 +10,43 @@
     <PreferenceCategory
         android:key="gestures_group"
         android:title="@string/gestures" >
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_double_click"
             android:title="@string/gesture_double_click" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_c"
             android:title="@string/gesture_c" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_e"
             android:title="@string/gesture_e" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_W"
             android:title="@string/gesture_W" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_O"
             android:title="@string/gesture_O" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_M"
             android:title="@string/gesture_M" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_Z"
             android:title="@string/gesture_Z" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_V"
             android:title="@string/gesture_V" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_S"
             android:title="@string/gesture_S" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_up"
             android:title="@string/gesture_up" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_down"
             android:title="@string/gesture_down" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_left"
             android:title="@string/gesture_left" />
-        <SwitchPreference
+        <com.baoxue.tpgesture.HftSwitchPreference
             android:key="gesture_right"
             android:title="@string/gesture_right" />
     </PreferenceCategory>
