--- a/res/xml/setting.xml
+++ b/res/xml/setting.xml
@@ -2,6 +2,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:key="parent" >
 
+    <PreferenceScreen
+        android:fragment="com.baoxue.tpgesture.DeveloperSettings"
+        android:key="developer"
+        android:title="@string/developer_title" />
+
     <SwitchPreference
         android:key="gesture_wakeup"
         android:title="@string/gesture_wakeup" >
